--- a/.gitignore
+++ b/.gitignore
@@ -18,13 +18,15 @@ crash.*.log
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
-override.tf
-override.tf.json
+*.override.tf
+*.override.tf.json
 *_override.tf
 *_override.tf.json
 
 # Ignore transient lock info files created by terraform apply
 .terraform.tfstate.lock.info
+.terraform.lock.hcl
+
 
 # Include override files you do wish to add to version control using negated pattern
 # !example_override.tf
